src/web/css/main.css
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 200;
  src: local('Raleway ExtraLight'), local('Raleway-ExtraLight'), url(../fonts/raleway-light.woff) format('woff');
}
@font-face {
  font-family: 'Raleway';
  font-style: normal;
  font-weight: 400;
  src: local('Raleway'), url(../fonts/raleway.woff) format('woff');
}

body {
	margin: 0;
	padding: 0;
	font-family: "Raleway", sans-serif;
	background-color: rgb(228, 228, 219);
}

.header-outer {
	position:absolute;
	background-image: url(../img/the-bay.jpg);
	background-size: cover;
	background-repeat: no-repeat;
	height: 180px; 
	width: 100%; 
	z-index: 1000;
}

.header-background {
	position: absolute;
	top:0;

	overflow: hidden;

	background-image: url(../img/the-bay.jpg);
	background-size: cover;
	background-repeat: no-repeat;
	height: 180px;
	width: 100%;

	filter: saturate(1.5) blur(7px);
	-webkit-filter: saturate(1.5) blur(7px);
	-moz-filter: saturate(1.5) blur(7px);
	-o-filter: saturate(1.5) blur(7px);
	-ms-filter: saturate(1.5) blur(7px);
}

.header-background.not-supported {
	background-color: black;
	opacity: 0.4;
}

.title, .my-coupons {
	color: white;
	font-weight: 200;
	z-index: 1001;
}

.title {
	position: absolute;
	top: 20px;
	left: 10px;
	font-size: 32pt;
	line-height: 0.9;
}

.my-coupons {
	position:absolute;
	top: 130px;
	width: 100%;
	height:50px;
	background-color: rgba(0,0,0,0.3);
	font-size: 16pt;
}

.saved-text {
	padding-top: 12px;
	padding-left: 5px;
}

.expand-arrow {
	position:absolute;
	top:5px;
	right:5px;
	width:40px;
	height:40px;
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-ms-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
	transition-duration: 0.5s;
	-webkit-transition-property: -webkit-transform;
	transition-property: transform;
	-moz-transition-property: -moz-transform;
	-ms-transition-property: -ms-transform;
	-o-transition-property: -o-transform;
}

.expand-arrow.expanded {
	transform: rotate(180deg);
	-webkit-transform: rotate(180deg);
	-moz-transform: rotate(180deg);
	-ms-transform: rotate(180deg);
	-o-transform: rotate(180deg);
}

.available-coupons {
	position: absolute;
	top: 180px;
	width: 100%;
	z-index: 0;
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-ms-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
	transition-duration: 0.5s;
	-webkit-transition-property: top;
	transition-property: top;
	-moz-transition-property: top;
	-ms-transition-property: top;
	-o-transition-property: top;
}

.available-coupons h1 {
	font-weight: 400;
	font-size: 16pt;
	color: rgb(71, 71, 71);
}

.coupon-images {
	margin: 0;
	padding: 0;
	width: 100%;
}

.coupon-images img {
	text-align: center;
	width: 95%;
}

.coupon-img {
	text-align: center;
	width: 100%;
}

.blur {
	filter: saturate(1.5) blur(7px);
	-webkit-filter: saturate(1.5) blur(7px);
	-moz-filter: saturate(1.5) blur(7px);
	-o-filter: saturate(1.5) blur(7px);
	-ms-filter: saturate(1.5) blur(7px);
}

.opaque {
	background-color: black;
	opacity: 0.4;
	filter: opacity(0.4);
}

.collected-coupons {
	position: absolute;
	width: 100%;
	z-index: 5;
	bottom: 0;
	background-color: rgb(241, 241, 241);
	-webkit-transition-duration: 0.5s;
	-moz-transition-duration: 0.5s;
	-ms-transition-duration: 0.5s;
	-o-transition-duration: 0.5s;
	transition-duration: 0.5s;
}

.collected-coupon {
	width: 100%;
	height: 100px;
	font-size: 16pt;
	border-bottom: 1px solid #7d7d7d;
	color: #686868;
}

.collected-coupon:after {
	content: '';
	clear: both;
}

.collected-coupon-text {
	display: inline-block;
	height: 100px;
	width: 50%;
	overflow: hidden;
	word-wrap: break-word;
	-ms-word-wrap: break-word;
	margin-left: 5px;
}

.collected-coupon-text:after {
	content: '';
	clear: both;
}

.status {
	color: white;
	z-index: 1001;
	position: absolute;
	top: 110px;
	right: 10px;
}

.barcode {
	margin-top: 5px;
	line-height: 3em;
	height: 85px;
	width: 130px;
}

